added data analysis

--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -28,8 +28,80 @@
  "cells": [
   {
    "source": [
-    "# Classical Implementation\n",
-    "In this notebook I have trained a classical (and likely biased) machine learning model on the original dataset"
+    "# 2 Analysis"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "A11    68\nA12    62\nA14    50\nA13    10\nName: Status of existing checking account, dtype: int64\n12    37\n24    34\n18    24\n15    17\n9     13\n36    11\n6     10\n30     9\n48     8\n10     4\n45     3\n21     3\n60     3\n39     2\n27     2\n13     2\n8      1\n72     1\n20     1\n11     1\n14     1\n22     1\n33     1\n4      1\nName: Duration in month, dtype: int64\nA32    137\nA34     33\nA31      8\nA33      7\nA30      5\nName: Credit history, dtype: int64\nA43    64\nA42    52\nA40    32\nA41    14\nA49    10\nA46     7\nA45     6\nA44     4\nA48     1\nName: Purpose, dtype: int64\n1258     2\n1275     2\n2039     2\n433      2\n3913     1\n        ..\n5152     1\n932      1\n674      1\n11560    1\n1282     1\nName: Credit amount, Length: 186, dtype: int64\nA61    123\nA65     28\nA62     22\nA63     11\nA64      6\nName: Savings account/bonds, dtype: int64\nA73    78\nA72    54\nA74    36\nA75    13\nA71     9\nName: Present employment since, dtype: int64\n4    82\n2    48\n1    33\n3    27\nName: Installment rate in percentage of disposable income, dtype: int64\nA92    105\nA93     56\nA94     27\nA91      2\nName: Personal status and sex, dtype: int64\nA101    170\nA103     11\nA102      9\nName: Other debtors / guarantors, dtype: int64\n4    84\n2    59\n1    30\n3    17\nName: Present residence since, dtype: int64\nA123    71\nA121    60\nA122    47\nA124    12\nName: Property, dtype: int64\n23    48\n24    44\n25    41\n22    27\n21    14\n20    14\n19     2\nName: Age in years, dtype: int64\nA143    161\nA141     20\nA142      9\nName: Other installment plans, dtype: int64\nA152    106\nA151     79\nA153      5\nName: Housing, dtype: int64\n1    145\n2     44\n3      1\nName: Number of existing credits at this bank, dtype: int64\nA173    138\nA172     42\nA174      5\nA171      5\nName: Job, dtype: int64\n1    184\n2      6\nName: Number of people being liable to provide maintenance for, dtype: int64\nA191    145\nA192     45\nName: Telephone, dtype: int64\nA201    187\nA202      3\nName: foreign worker, dtype: int64\n1    110\n2     80\nName: label, dtype: int64\n20.96786155747837\n144.53856980259212\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "with open('../german-credit-dataset/german.data', 'r') as infile:\n",
+    "    data_contents = infile.read()    \n",
+    "    data_contents = re.sub(r' ', \",\", data_contents)\n",
+    "\n",
+    "    with open('../german-credit-dataset/german.csv', 'w') as outfile:\n",
+    "        outfile.write(data_contents)\n",
+    "\n",
+    "data = pd.read_csv('../german-credit-dataset/german.csv')\n",
+    "\n",
+    "data.columns = [\n",
+    "    'Status of existing checking account', \n",
+    "    'Duration in month',\n",
+    "    'Credit history',\n",
+    "    'Purpose',\n",
+    "    'Credit amount',\n",
+    "    'Savings account/bonds',\n",
+    "    'Present employment since',\n",
+    "    'Installment rate in percentage of disposable income',\n",
+    "    'Personal status and sex',\n",
+    "    'Other debtors / guarantors',\n",
+    "    'Present residence since',\n",
+    "    'Property',\n",
+    "    'Age in years',\n",
+    "    'Other installment plans',\n",
+    "    'Housing',\n",
+    "    'Number of existing credits at this bank',\n",
+    "    'Job',\n",
+    "    'Number of people being liable to provide maintenance for',\n",
+    "    'Telephone',\n",
+    "    'foreign worker',\n",
+    "    'label']\n",
+    "# FIXME The labels overwrite the first row.\n",
+    "# print(data.iloc[0])\n",
+    "\n",
+    "young_group = data[data['Age in years'] <= 25]\n",
+    "aged_group = data[data['Age in years'] > 25]\n",
+    "\n",
+    "for i in range(21):\n",
+    "    print(young_group.iloc[:, i].value_counts())\n",
+    "\n",
+    "g = 'Duration in month'\n",
+    "print(aged_group[g].mean())\n",
+    "print(aged_group[g].var())"
+   ]
+  },
+  {
+   "source": [
+    "# 3 Implementation\n",
+    "The implementation section this notebook is divided into 3 separate sections\n",
+    "- Sections 0.x refer to the reading in and tidying up of the dataset\n",
+    "- Sections 3.3.x refer to the implementation of a classical (and likely biased) machine learning model using the original dataset\n",
+    "- Sections 3.4.x refer to the implementation of my chosen technique to reduce bias"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -56,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +250,15 @@
   },
   {
    "source": [
-    "## 3.3.3a Train a Naive Bayes model"
+    "## 3.3.3a Train a Naive Bayes model\n",
+    "Here I train the classicla Naive Bayes model using the original dataset."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +269,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 103
     }
    ],
    "source": [
@@ -208,14 +281,16 @@
   },
   {
    "source": [
-    "## 3.3.3b Evaluate the model"
+    "## 3.3.3b Evaluate the model\n",
+    "To evaluate this model I want to consider the accuracy of its predictions and the score it receives for disparate impact.\n",
+    "I also chose to print out the confusion matrix and classification report."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,15 +310,12 @@
     "    predictions_p = trained_model.predict(X_test_p)\n",
     "    good_p = (predictions_p == 1).sum()/len(predictions_p)\n",
     "\n",
-    "    return good_up/good_p\n",
-    "    \n",
-    "\n",
-    "# disparate_impact(nb_classifier, 0, 'A13', 1, X_test, y_test)"
+    "    return good_up/good_p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -388,21 +460,23 @@
   },
   {
    "source": [
-    "## Apply the CND algorithm"
+    "## 3.4.1 Apply the CND algorithm\n",
+    "In this section I apply the CND algorithm to the training data from above. This yields an unbiased classifier which is then evaluated and compared with the original classifier."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "The first step is to create a new dataset which is a concatenation of X_train and y_train, this will be modified to become unbiased"
+    "The first step is to combine X_train and y_train, this is the dataset which I will modify to become unbiased.\n",
+    "I also test its level of discrimination using the function defined above."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -413,33 +487,26 @@
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 109
     }
    ],
    "source": [
     "training_data = pd.concat((X_train, y_train), axis=1)\n",
+    "# print(new_dataset.head)\n",
     "\n",
-    "test_discrimination(training_data, 0, 'A13', 1)\n",
-    "\n",
-    "# print(new_dataset)\n",
-    "\n",
-    "# a = new_dataset[new_dataset['label'] == 1]\n",
-    "# b = new_dataset[new_dataset['A13'] == 1]\n",
-    "# c = a[a['A13'] == 1]\n",
-    "\n",
-    "# a.shape, b.shape, c.shape"
+    "test_discrimination(training_data, 0, 'A13', 1)"
    ]
   },
   {
    "source": [
-    "We want to add a list of label probabilities to this using the pre-built classifier"
+    "I use the rank() function to return a set of candidates for promotion, a set of candidates for demotion and the rest of the dataset (which should remain untouched)"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,9 +532,6 @@
     "    dataset['rank_score'] = features.apply(nb_predict, axis=1, result_type='expand')\n",
     "    dataset['label'] = labels\n",
     "\n",
-    "    # We also add indices for reference\n",
-    "    # dataset['new_index'] = range(len(dataset))\n",
-    "\n",
     "    candidates_for_promotion = dataset[dataset[sensitive_column] == sensitive_value][dataset['label'] != desired_label]\n",
     "    # print(candidates_for_promotion.shape)\n",
     "    candidates_for_promotion.sort_values('rank_score', inplace=True, ascending=False)\n",
@@ -480,14 +544,19 @@
     "    rest_of_dataset_2 = dataset[dataset[sensitive_column] != sensitive_value][dataset['label'] != desired_label]\n",
     "    rest_of_dataset = pd.concat([rest_of_dataset_1, rest_of_dataset_2])\n",
     "\n",
-    "    return candidates_for_promotion, candidates_for_demotion, rest_of_dataset\n",
-    "\n",
-    "# rank(new_dataset, 0, 'A13', 1)"
+    "    return candidates_for_promotion, candidates_for_demotion, rest_of_dataset"
    ]
   },
   {
+   "source": [
+    "Here I implement the CND algorithm which takes a dataset and the relevant information and returns a dataset with KCDM=0."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 111,
    "metadata": {
     "tags": []
    },
@@ -496,26 +565,12 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:30: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:34: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:35: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "9 swaps were required to reduce the bias in the dataset\n"
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:31: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:32: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:19: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:23: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
      ]
     }
    ],
    "source": [
-    "def cnd(dataset, sensitive_value, sensitive_column, desired_label):\n",
+    "def CND(dataset, sensitive_value, sensitive_column, desired_label):\n",
     "\n",
     "    candidates_for_promotion, candidates_for_demotion, rest_of_dataset = rank(dataset, sensitive_value, sensitive_column, desired_label)\n",
     "    \n",
@@ -530,7 +585,6 @@
     "    aged_pos_group = aged_group[aged_group['label'] == desired_label]\n",
     "    s_hat_pos = len(aged_pos_group)\n",
     "    swaps_required = round(( (s * s_hat_pos) - (s_hat * s_pos) ) / (s + s_hat))\n",
-    "    # print(swaps_required)\n",
     "\n",
     "    for i in range(int(swaps_required)):\n",
     "        row_cp = candidates_for_promotion.iloc[[i]]\n",
@@ -541,25 +595,32 @@
     "        row_cd['label'] = 2\n",
     "        candidates_for_demotion.iloc[[i]] = row_cd\n",
     "\n",
-    "    print(f'{swaps_required} swaps were required to reduce the bias in the dataset')\n",
-    "\n",
+    "    # print(f'{swaps_required} swaps were required to reduce the bias in the dataset')\n",
     "    \n",
     "    new_dataset = pd.concat([rest_of_dataset, candidates_for_promotion, candidates_for_demotion])\n",
     "    return new_dataset\n",
     "\n",
-    "data_cnd = cnd(training_data, 0, 'A13', 1)"
+    "data_cnd = CND(training_data, 0, 'A13', 1)"
    ]
   },
   {
+   "source": [
+    "I now split the dataset produced by the CND algorithm into features and labels, ready to train a new classifier.\n",
+    "I also test the discrimination in the new dataset."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.002808673182788435\n"
+      "The level of discrimination in the dataset produced by the CND algorithm is  0.00281\nThe KCDM of the unedited dataset was 0.1292\nThe % decrease of the KCDM through the CND is 97.82608695652175\n"
      ]
     }
    ],
@@ -567,19 +628,24 @@
     "X_train_cnd = data_cnd.iloc[:, :24] # columns 0 to 24\n",
     "Y_train_cnd = data_cnd.iloc[:, 24] # column 25\n",
     "\n",
-    "print(test_discrimination(data_cnd, 0, 'A13', 1))"
+    "original_KCDM = test_discrimination(training_data, 0, \"A13\", 1)\n",
+    "KCDM = test_discrimination(data_cnd, 0, 'A13', 1)\n",
+    "\n",
+    "print('The level of discrimination in the dataset produced by the CND algorithm is ', round(KCDM, 5))\n",
+    "print(f'The KCDM of the unedited dataset was {round(original_KCDM,5)}')\n",
+    "print(f'The % decrease of the KCDM through the CND is {100*(1-KCDM/original_KCDM)}')"
    ]
   },
   {
    "source": [
-    "Train a new, unbiased model"
+    "I now train a new, unbiased model using the dataset produced by the CND algorithm"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +656,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 113
     }
    ],
    "source": [
@@ -600,14 +666,14 @@
   },
   {
    "source": [
-    "# Evaluation and comparison"
+    "## 3.4.3 Evaluation and comparison"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
