fixed data analysis

--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -35,17 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "A11    68\nA12    62\nA14    50\nA13    10\nName: Status of existing checking account, dtype: int64\n12    37\n24    34\n18    24\n15    17\n9     13\n36    11\n6     10\n30     9\n48     8\n10     4\n45     3\n21     3\n60     3\n39     2\n27     2\n13     2\n8      1\n72     1\n20     1\n11     1\n14     1\n22     1\n33     1\n4      1\nName: Duration in month, dtype: int64\nA32    137\nA34     33\nA31      8\nA33      7\nA30      5\nName: Credit history, dtype: int64\nA43    64\nA42    52\nA40    32\nA41    14\nA49    10\nA46     7\nA45     6\nA44     4\nA48     1\nName: Purpose, dtype: int64\n1258     2\n1275     2\n2039     2\n433      2\n3913     1\n        ..\n5152     1\n932      1\n674      1\n11560    1\n1282     1\nName: Credit amount, Length: 186, dtype: int64\nA61    123\nA65     28\nA62     22\nA63     11\nA64      6\nName: Savings account/bonds, dtype: int64\nA73    78\nA72    54\nA74    36\nA75    13\nA71     9\nName: Present employment since, dtype: int64\n4    82\n2    48\n1    33\n3    27\nName: Installment rate in percentage of disposable income, dtype: int64\nA92    105\nA93     56\nA94     27\nA91      2\nName: Personal status and sex, dtype: int64\nA101    170\nA103     11\nA102      9\nName: Other debtors / guarantors, dtype: int64\n4    84\n2    59\n1    30\n3    17\nName: Present residence since, dtype: int64\nA123    71\nA121    60\nA122    47\nA124    12\nName: Property, dtype: int64\n23    48\n24    44\n25    41\n22    27\n21    14\n20    14\n19     2\nName: Age in years, dtype: int64\nA143    161\nA141     20\nA142      9\nName: Other installment plans, dtype: int64\nA152    106\nA151     79\nA153      5\nName: Housing, dtype: int64\n1    145\n2     44\n3      1\nName: Number of existing credits at this bank, dtype: int64\nA173    138\nA172     42\nA174      5\nA171      5\nName: Job, dtype: int64\n1    184\n2      6\nName: Number of people being liable to provide maintenance for, dtype: int64\nA191    145\nA192     45\nName: Telephone, dtype: int64\nA201    187\nA202      3\nName: foreign worker, dtype: int64\n1    110\n2     80\nName: label, dtype: int64\n20.96786155747837\n144.53856980259212\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -83,16 +75,92 @@
     "    'label']\n",
     "# FIXME The labels overwrite the first row.\n",
     "# print(data.iloc[0])\n",
+    "numeric_columns = ['Duration in month', 'Credit amount', 'Installment rate in percentage of disposable income', 'Present residence since', 'Age in years', 'Number of existing credits at this bank', 'Number of people being liable to provide maintenance for']\n",
     "\n",
     "young_group = data[data['Age in years'] <= 25]\n",
-    "aged_group = data[data['Age in years'] > 25]\n",
-    "\n",
-    "for i in range(21):\n",
-    "    print(young_group.iloc[:, i].value_counts())\n",
-    "\n",
-    "g = 'Duration in month'\n",
-    "print(aged_group[g].mean())\n",
-    "print(aged_group[g].var())"
+    "aged_group = data[data['Age in years'] > 25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Printing the young group value counts for each column\nA11    68\nA12    62\nA14    50\nA13    10\nName: Status of existing checking account, dtype: int64\nA32    137\nA34     33\nA31      8\nA33      7\nA30      5\nName: Credit history, dtype: int64\nA43    64\nA42    52\nA40    32\nA41    14\nA49    10\nA46     7\nA45     6\nA44     4\nA48     1\nName: Purpose, dtype: int64\nA61    123\nA65     28\nA62     22\nA63     11\nA64      6\nName: Savings account/bonds, dtype: int64\nA73    78\nA72    54\nA74    36\nA75    13\nA71     9\nName: Present employment since, dtype: int64\nA92    105\nA93     56\nA94     27\nA91      2\nName: Personal status and sex, dtype: int64\nA101    170\nA103     11\nA102      9\nName: Other debtors / guarantors, dtype: int64\nA123    71\nA121    60\nA122    47\nA124    12\nName: Property, dtype: int64\nA143    161\nA141     20\nA142      9\nName: Other installment plans, dtype: int64\nA152    106\nA151     79\nA153      5\nName: Housing, dtype: int64\nA173    138\nA172     42\nA174      5\nA171      5\nName: Job, dtype: int64\nA191    145\nA192     45\nName: Telephone, dtype: int64\nA201    187\nA202      3\nName: foreign worker, dtype: int64\n1    110\n2     80\nName: label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Printing the young group value counts for each column')\n",
+    "for c in data.columns:\n",
+    "    if c not in numeric_columns:\n",
+    "        print(young_group[c].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Printing the aged group value counts for each column\nA14    344\nA12    207\nA11    205\nA13     53\nName: Status of existing checking account, dtype: int64\nA32    393\nA34    259\nA33     81\nA31     41\nA30     35\nName: Credit history, dtype: int64\nA43     215\nA40     202\nA42     129\nA41      89\nA49      87\nA46      43\nA45      16\nA410     12\nA44       8\nA48       8\nName: Purpose, dtype: int64\nA61    480\nA65    154\nA62     81\nA63     52\nA64     42\nName: Savings account/bonds, dtype: int64\nA73    261\nA75    239\nA74    138\nA72    118\nA71     53\nName: Present employment since, dtype: int64\nA93    491\nA92    205\nA94     65\nA91     48\nName: Personal status and sex, dtype: int64\nA101    736\nA103     41\nA102     32\nName: Other debtors / guarantors, dtype: int64\nA123    261\nA121    221\nA122    185\nA124    142\nName: Property, dtype: int64\nA143    652\nA141    119\nA142     38\nName: Other installment plans, dtype: int64\nA152    606\nA153    103\nA151    100\nName: Housing, dtype: int64\nA173    491\nA172    158\nA174    143\nA171     17\nName: Job, dtype: int64\nA191    451\nA192    358\nName: Telephone, dtype: int64\nA201    775\nA202     34\nName: foreign worker, dtype: int64\n1    589\n2    220\nName: label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Printing the aged group value counts for each column')\n",
+    "for c in data.columns:\n",
+    "    if c not in numeric_columns:\n",
+    "        print(aged_group[c].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Duration in month\nmean: 20.705263157894738\nvariance 149.4682261208577\n\nCredit amount\nmean: 3003.357894736842\nvariance 7967121.14107491\n\nInstallment rate in percentage of disposable income\nmean: 2.831578947368421\nvariance 1.3577276524644946\n\nPresent residence since\nmean: 2.8157894736842106\nvariance 1.3574213311055414\n\nAge in years\nmean: 23.110526315789475\nvariance 2.3633806739069896\n\nNumber of existing credits at this bank\nmean: 1.2421052631578948\nvariance 0.19504316346421613\n\nNumber of people being liable to provide maintenance for\nmean: 1.0315789473684212\nvariance 0.030743525480367587\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in numeric_columns:\n",
+    "    print(col)\n",
+    "    print('mean:', young_group[col].mean())\n",
+    "    print('variance', young_group[col].var())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Duration in month\nmean: 20.96786155747837\nvariance 144.53856980259212\n\nCredit amount\nmean: 3336.7750309023486\nvariance 7961090.639920327\n\nInstallment rate in percentage of disposable income\nmean: 3.004944375772559\nvariance 1.2227478001199379\n\nPresent residence since\nmean: 2.850432632880099\nvariance 1.186760332399124\n\nAge in years\nmean: 38.427688504326326\nvariance 113.53467794245432\n\nNumber of existing credits at this bank\nmean: 1.4449938195302843\nvariance 0.35866612001125947\n\nNumber of people being liable to provide maintenance for\nmean: 1.1841779975278122\nvariance 0.1504424237232129\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in numeric_columns:\n",
+    "    print(col)\n",
+    "    print('mean:', aged_group[col].mean())\n",
+    "    print('variance', aged_group[col].var())\n",
+    "    print()"
    ]
   },
   {
@@ -128,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +337,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 103
+     "execution_count": 82
     }
    ],
    "source": [
@@ -290,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +555,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 109
+     "execution_count": 88
     }
    ],
    "source": [
@@ -506,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 90,
    "metadata": {
     "tags": []
    },
@@ -613,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +724,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 113
+     "execution_count": 92
     }
    ],
    "source": [
@@ -673,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
